# tchecker

./: CMakeLists.txt
cmake/: CheckCompilerFlags.cmake
doc/: usage.md
include/tchecker/algorithms/covreach/: algorithm.hh  cover.hh  graph.hh  options.hh  output.hh  stats.hh
include/tchecker/algorithms/explore/: graph.hh  options.hh
include/tchecker/algorithms/reach/: algorithm.hh
include/tchecker/async_zg/details/: model.hh
include/tchecker/dbm/: dbm.hh
include/tchecker/graph/: cover_graph.hh  directed_graph.hh
include/tchecker/ts/: builder.hh
include/tchecker/utils/: array.hh  iterator.hh  pool.hh  shared_objects.hh  waiting.hh
include/tchecker/zg/: zg_ta.hh
include/tchecker/zg/details/: ts.hh
include/tchecker/zone/dbm/: extrapolation.hh  semantics.hh
src/: CMakeLists.txt
src/algorithms/covreach/: stats.cc
src/dbm/: dbm.cc
src/tck-reach/: zg-reach.cc
src/zone/dbm/: semantics.cc
test/: CMakeLists.txt  unittest.cc
